[project]
name = "rns-barque-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "timonmerk", email = "timon.merk95@gmail.com" }
]
dependencies = [
    "py-neuromodulation>=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rns_barque_detection"]
